--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -1,3 +1,9 @@
-- name: Hello
-  debug:
-    msg: Hello
+- name: Create a jenkins job using the token
+  community.general.jenkins_job:
+    config: "{{ lookup('template', 'templates/pipeline.xml') }}"
+    name: test
+    url: http://44.193.77.12:8080
+    user: admin
+    password: admin123
+  loop:
+    - {repoName: "cart", componentName: "cart"}
