--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -1,3 +1,11 @@
+- name: template
+  template:
+    src: pipeline.xml
+    dest: /tmp/pipeline.xml
+  loop:
+    - { repoName: "cart", componentName: "cart" }
+
+
 - name: Create a jenkins job using the token
   community.general.jenkins_job:
     config: "{{ lookup('template', 'templates/pipeline.xml') }}"
