--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -12,6 +12,4 @@
     name: test
     url: http://44.193.77.12:8080
     user: admin
-    password: admin123
-  loop:
-    - {repoName: "cart", componentName: "cart"}
+    token: 114bbdbb72d37a4594148869f959450bd7
