--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -10,6 +10,6 @@
   community.general.jenkins_job:
     config: "{{ lookup('template', 'templates/pipeline.xml') }}"
     name: test
-    url: http://44.193.77.12:8080
+    url: http://jenkins.kvdevops.site:8080
     user: admin
     token: 114bbdbb72d37a4594148869f959450bd7
