--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -8,7 +8,7 @@
 
 - name: Create a jenkins job using the token
   community.general.jenkins_job:
-    config: "{{ lookup('template', 'templates/pipeline.xml') }}"
+    config: "{{ lookup('file', '/tmp/pipeline.xml') }}"
     name: test
     url: http://jenkins.kvdevops.site:8080
     user: admin
