--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -1,15 +1,10 @@
-- name: template
-  template:
-    src: pipeline.xml
-    dest: /tmp/pipeline.xml
-  loop:
-    - { repoName: "cart", componentName: "cart" }
-
 
 - name: Create a jenkins job using the token
   community.general.jenkins_job:
-    config: "{{ lookup('file', '/tmp/pipeline.xml') }}"
-    name: test
+    config: "{{ lookup('template', '/tmp/pipeline.xml') }}"
+    name: "test"
     url: http://172.31.2.203:8080
     user: admin
     token: 114bbdbb72d37a4594148869f959450bd7
+  loop:
+    - { repoName: "cart", componentName: "cart" }
