--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -1,10 +1,10 @@
 
-- name: Create a jenkins job using the token
+- name: Create Pipeline Jobs
   community.general.jenkins_job:
     config: "{{ lookup('template', '/tmp/pipeline.xml') }}"
-    name: "test"
+    name: "{{item.folderName}}/{{item.jobName}}"
     url: http://172.31.2.203:8080
     user: admin
     token: 114bbdbb72d37a4594148869f959450bd7
   loop:
-    - { repoName: "cart", componentName: "cart" }
+    - { jobName: "cart", folderName: "", repoName: "cart", componentName: "cart" }
