--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Create Pipeline Jobs
   community.general.jenkins_job:
     config: "{{ lookup('template', '/tmp/pipeline.xml') }}"
-    name: "{{item.folderName}}/{{item.jobName}}"
+    name: "{{item.folderName}}{{item.jobName}}"
     url: http://172.31.2.203:8080
     user: admin
     token: 114bbdbb72d37a4594148869f959450bd7
