--- a/roles/jenkins/vars/main.yml
+++ b/roles/jenkins/vars/main.yml
@@ -2,4 +2,4 @@ folders:
   - {name: "CI-Pipelines", description: "CI Pipeline jobs for All Roboshop Components"}
 
 pipelineJobs:
-  - { jobName: "cart", folderName: "", repoName: "cart", componentName: "cart" }
+  - { jobName: "cart", folderName: "CI-Pipelines/", repoName: "cart", componentName: "cart" }
