--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -8,14 +8,14 @@
   loop: "{{folders}}"
 
 
-#- name: Create Single Branch Pipeline Jobs
-#  community.general.jenkins_job:
-#    config: "{{ lookup('template', 'pipeline.xml') }}"
-#    name: "{{item.folderName}}{{item.jobName}}"
-#    url: http://172.31.2.203:8080
-#    user: admin
-#    token: 114bbdbb72d37a4594148869f959450bd7
-#  loop: "{{pipelineJobs}}"
+- name: Create Single Branch Pipeline Jobs
+  community.general.jenkins_job:
+    config: "{{ lookup('template', 'pipeline.xml') }}"
+    name: "{{item.folderName}}{{item.jobName}}"
+    url: http://172.31.2.203:8080
+    user: admin
+    token: 114bbdbb72d37a4594148869f959450bd7
+  loop: "{{pipelineJobs}}"
 
 
 - name: Create Multi Branch Pipeline Jobs
