--- a/roles/jenkins/vars/main.yml
+++ b/roles/jenkins/vars/main.yml
@@ -8,3 +8,6 @@ multibranchJobs:
   - { jobName: "payment", folderName: "CI-Pipelines/", repoName: "payment", componentName: "payment" }
   - { jobName: "shipping", folderName: "CI-Pipelines/", repoName: "shipping", componentName: "shipping" }
   - { jobName: "frontend", folderName: "CI-Pipelines/", repoName: "frontend", componentName: "frontend" }
+
+pipelineJobs:
+  - { jobName: "deploy-to-any-env", folderName: "", repoName: "roboshop-jenkins", filename: "Jenkinsfile-any-env-deploy"}
